js 오류 수정 ( defer) 명령어 추가

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>자바스크립트 투두리스트</title>
-
     <link rel="stylesheet" href="./style.css" />
-    <script type="text/javascript" src="./todo.js"></script>
+    <script type="text/javascript" src="./todo.js" defer></script>
   </head>
   <body>
     <div class="todo-container">
